--- a/eval2.ipynb
+++ b/eval2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,12 +15,14 @@
     "\n",
     "from tqdm import tqdm\n",
     "\n",
+    "from config import FULL, CORPUS, PROBLEM, STOPWORDS\n",
+    "\n",
     "textstat.set_lang(\"pl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -42,36 +44,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_file = Path(\"full.txt\")\n",
-    "twitter_file = Path(\"corpus.txt\")\n",
-    "problem_file = Path(\"problem.txt\")"
+    "full_file = FULL\n",
+    "twitter_file = CORPUS\n",
+    "problem_file = PROBLEM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "13471299it [00:09, 1423540.16it/s]\n"
+      "5125025it [00:02, 1924314.18it/s]"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3401364"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -81,25 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2203079it [00:00, 2249730.44it/s]\n"
+      "1985964it [00:01, 1528527.00it/s]"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "991200"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -109,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +100,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22844it [00:00, 2173555.66it/s]\n"
+      "22844it [00:00, 2387131.41it/s]\n"
      ]
     },
     {
@@ -127,7 +109,7 @@
        "11053"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,264 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Zatrzasnął drzwi od mieszkania, dwa razy przek...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bohaterem powieści Paźniewskiego jest miasto, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ale dzisiaj? Jaką dzisiaj odegra rolę poetyka ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Halina Auderska we wszystkich książkach każe s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Paźniewski w \"Krótkich dniach\" ofiarował Kreso...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                text\n",
-       "0  Zatrzasnął drzwi od mieszkania, dwa razy przek...\n",
-       "1  Bohaterem powieści Paźniewskiego jest miasto, ...\n",
-       "2  Ale dzisiaj? Jaką dzisiaj odegra rolę poetyka ...\n",
-       "3  Halina Auderska we wszystkich książkach każe s...\n",
-       "4  Paźniewski w \"Krótkich dniach\" ofiarował Kreso..."
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "full_df = pd.DataFrame(data=full_data, columns=['text'])\n",
-    "full_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>@user ten w lewym dolnym rogu wyglada ładnie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>@user @user @user Był mój. Już przeprosiłem. J...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>@user @user @user @user @user @user @user @use...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>@user zaprowadzic cie do lazienki andziu?? :]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>@user @user @user @user @user Chętni na darmow...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                text\n",
-       "0      @user ten w lewym dolnym rogu wyglada ładnie \n",
-       "1  @user @user @user Był mój. Już przeprosiłem. J...\n",
-       "2  @user @user @user @user @user @user @user @use...\n",
-       "3     @user zaprowadzic cie do lazienki andziu?? :] \n",
-       "4  @user @user @user @user @user Chętni na darmow..."
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twitter_df = pd.DataFrame(data=twitter_data, columns=['text'])\n",
-    "twitter_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Dla mnie faworytem do tytułu będzie Cracovia. ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>@anonymized_account @anonymized_account Brawo ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>@anonymized_account @anonymized_account Super,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>@anonymized_account @anonymized_account Musi. ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Odrzut natychmiastowy, kwaśna mina, mam problem</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                text\n",
-       "0  Dla mnie faworytem do tytułu będzie Cracovia. ...\n",
-       "1  @anonymized_account @anonymized_account Brawo ...\n",
-       "2  @anonymized_account @anonymized_account Super,...\n",
-       "3  @anonymized_account @anonymized_account Musi. ...\n",
-       "4   Odrzut natychmiastowy, kwaśna mina, mam problem "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "problem_df = pd.DataFrame(data=problem_data, columns=['text'])\n",
-    "problem_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "stop_words_df = pd.read_csv('stopwords.txt', header=None)\n",
+    "stop_words_df = pd.read_csv(STOPWORDS, header=None)\n",
     "STOPWORDS = set(stop_words_df[0].to_list()).union({'user'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# import spacy\n",
-    "# import seaborn as sns\n",
-    "\n",
-    "# nlp = spacy.load(\"pl_core_news_md\")\n",
-    "# df = pd.DataFrame()\n",
-    "# df['doc'] = [nlp(text) for text in problem_df.text]\n",
-    "# df['num_tokens'] = [len(token) for token in df.doc]\n",
-    "\n",
-    "# g = sns.histplot(df.num_tokens)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
